# 42-libft

./: .gitignore  Makefile  libft.h  meson.build
includes/: libft.h
srcs/: libft_char_checker1.c  libft_char_checker2.c  libft_converters1.c  libft_gnl.c  libft_gnl1.c  libft_gnl2.c  libft_list_utils1.c  libft_list_utils2.c  libft_memory_utils1.c  libft_memory_utils2.c  libft_printers1.c  libft_printf_utils1.c  libft_printf_utils2.c  libft_printf_utils3.c  libft_put_fd.c  libft_split.c  libft_split_keep.c  libft_split_keep_utils.c  libft_str_checker1.c  libft_string_utils1.c  libft_string_utils2.c  libft_string_utils3.c  libft_string_utils4.c  libft_string_utils5.c
